sugar/tests/success/cut.mx

u : _|_
    |- connect
        { x : _|_ -> x
        ; y -> let () = y in u
        }

