sugar/tests/fail/cut_mismatch.mx
|- connect
    { a : _|_ -> a
    ; b : _|_ -> b
    }
